# nj-quant

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CN.md  best_params.json  csv_columns.txt  data_column_names.py  findings.md  ga_output.txt  ga_output_utf8.txt  main.py  optimization_results.json  optuna_trials.csv  progress.md  pyproject.toml  pytest.ini  requirements.txt  task_plan.md  temp_cols.txt
.claude/: settings.local.json
.codex/: config.toml
back_testing/: backtest_engine.py  base_rotator.py  combined_strategy.py  composite_rotator.py  composite_scorer.py  composite_selector.py  index_data_provider.py  portfolio_backtest.py  portfolio_optimizer.py  portfolio_rotator.py  position_manager.py  risk_manager.py  run_composite_backtest.py  run_full_backtest.py  run_rotator_backtest.py  signal_scorer.py  stock_selector.py  stop_loss_strategies.py  strategy_evaluator.py  timing_back_testing.py  visualizer.py
back_testing/analysis/: performance_analyzer.py  visualizer.py
back_testing/backtest/: run_backtest.py  run_composite_backtest.py  run_daily_rotation.py  run_full_backtest.py  run_rotator_backtest.py
back_testing/config/: database.ini
back_testing/core/: backtest_engine.py  portfolio_optimizer.py
back_testing/data/: build_daily_cache.py  daily_data_cache.py  data_provider.py
back_testing/factors/: __init__.py  factor_config.py  factor_loader.py  factor_utils.py
backtesting/: run_daily_rotation.py  timing_back_testing.py
data_processor/: price_calculator.py
deploy/: .env.example  crontab.txt  nginx.conf  nj-quant-web.service
doc/: Column_Description.md  量化.xmind
docs/: deployment.md
experiments/: __init__.py  recorder.py
robustness/: __init__.py  cscv.py  monte_carlo.py  robustness_analyzer.py  sensitivity.py  sensitivity_report.py  statistics.py
scripts/: migrate_to_ecs.sh  optuna-dashboard.service  server_setup_01_init.sql  server_setup_02_tables.sql  start.sh
signal_pipeline/: __init__.py  batch_backfill.py  intraday_signal.py  night_backfill.py  schema.sql  signal_generator.py
strategy/: abstract_strategy.py  first_strategy.py
tests/: conftest.py  verify_cache_accuracy.py
(+245 files in other folders)
