[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nj-quant"
version = "0.8.0"
description = "A-share quantitative trading system with daily rotation, Optuna optimization, ML ranking, and temporal feature layer"
requires-python = ">=3.10"
readme = "CLAUDE.md"
license = {text = "MIT"}
authors = [
    {name = "noah"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # Data fetching
    "akshare>=1.12.0",
    "tushare>=1.3.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # ML / Modeling
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    # Deep Learning (Temporal Feature Layer)
    "torch>=2.0.0",
    # Optimization
    "optuna>=3.0.0",
    # Backtesting
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    # Web
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
nj-quant-backtest = "backtesting.run_daily_rotation:main"
nj-quant-optimize = "optimization.optuna.run_daily_rotation_optimization:main"
nj-quant-ml-optimize = "optimization.optuna.run_ml_optimization:main"
nj-quant-factor-screen = "strategy.factors.factor_screening:main"
nj-quant-pretrain = "strategy.ml.temporal.pretrain:main"

[tool.setuptools.packages.find]
include = [
    "backtesting*",
    "strategy*",
    "data*",
    "optimization*",
    "robustness*",
    "signal_pipeline*",
    "web*",
    "config*",
    "scripts*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
